// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el componente <GifExpertApp /> Debe coincidir el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertpp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas con el componente <GifExpertApp /> Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertpp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The Office"
      key="The Office"
    />
    <GifGrid
      category="Brooklyn 99"
      key="Brooklyn 99"
    />
  </ol>
</Fragment>
`;
